--- a/install
+++ b/install
@@ -126,3 +126,17 @@ echo "Dotfiles installation complete!"
 # Start zsh
 echo "Starting zsh..."
 exec zsh -l
+
+# Generate new SSH key
+echo "Generating new SSH key..."
+ssh-keygen -t ed25519 -C "github@benjaminarnav.com" -f "$HOME/.ssh/id_ed25519" -N ""
+
+# Start SSH agent
+eval "$(ssh-agent -s)"
+
+# Add key to SSH agent
+ssh-add "$HOME/.ssh/id_ed25519"
+
+# Display the public key
+echo "Here is your public SSH key (add this to GitHub):"
+bat "$HOME/.ssh/id_ed25519.pub"
